# WW

./: .gitignore  CMakeLists.txt  COMPILE_GUIDE.md  INJECTION_FIX_GUIDE.md  README.md  SOLUCAO_RAPIDA_PT.md  SOURCE_TEMPLATE.cpp  w.py
